<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:weightSum="1">

        <ImageView
            android:layout_width="137dp"
            android:layout_height="216dp"
            app:srcCompat="@mipmap/ic_not_found"
            android:id="@+id/img_disk_cover"
            android:contentDescription="@string/disk_art"
            android:padding="2dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="197dp"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:layout_weight="0.66">

            <TextView
                android:text="@string/textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_movie_title"
                android:textSize="30sp" />

            <TextView
                android:text="@string/textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/txt_movie_synopsis"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rating_movie_stars"
        android:isIndicator="false"
        android:layout_gravity="center"
        android:numStars="5"
        android:stepSize="1" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ToggleButton
        android:text="@string/togglebutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tgl_move_check_in_out"
        android:textOff="@string/check_out"
        android:textOn="@string/check_in" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:id="@+id/spnr_movie_friends" />

    <Button
        android:text="Rent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_rent" />


    <!--<LinearLayout-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <!--<ImageView-->
            <!--android:layout_width="123dp"-->
            <!--android:layout_height="match_parent"-->
            <!--app:srcCompat="@android:drawable/ic_menu_info_details"-->
            <!--android:id="@+id/img_friend_profile_pic"-->
            <!--android:contentDescription="@string/image_placeholder"-->
            <!--android:layout_weight="0.26" />-->

        <!--<LinearLayout-->
            <!--android:orientation="vertical"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1">-->

            <!--<TextView-->
                <!--android:text="@string/textview"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/txt_friend_name"-->
                <!--android:textSize="18sp" />-->

            <!--<TextView-->
                <!--android:text="@string/textview"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/txt_friend_address_1"-->
                <!--android:textSize="18sp" />-->

            <!--<TextView-->
                <!--android:text="@string/textview"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/txt_friend_address_2"-->
                <!--android:textSize="18sp" />-->

            <!--<TextView-->
                <!--android:text="@string/textview"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/txt_friend_phone"-->
                <!--android:textSize="18sp" />-->

            <!--<TextView-->
                <!--android:text="@string/textview"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/txt_friend_email"-->
                <!--android:textSize="18sp" />-->
        <!--</LinearLayout>-->

    <!--</LinearLayout>-->
</LinearLayout>